# cpp-linux-distrib-system

./: .gitignore  CMakeLists.txt  README.md
src/: Container.cpp  Container.h  DerivedDistribs.cpp  DerivedDistribs.h  InstallStrategies.h  InstallStrategy.h  IteratorDecorators.h  LinuxDistrib.cpp  LinuxDistrib.h  LinuxFactory.cpp  LinuxFactory.h  SQLiteContainer.cpp  SQLiteContainer.h  SortedContainer.cpp  SortedContainer.h  algorithms.h  main.cpp
